# drumgizmo

./: .clang-format  .clang_complete  .gitignore  .gitmodules  ABOUT  ABOUT.fr  AUTHORS  AUTHORS.fr  BUGS  BUGS.fr  ChangeLog  Makefile.am  README  README.md  RELEASE-CHECKLIST  autogen.sh  configure.ac  configure.in  testdist.sh  version.h
dgedit/: .gitignore  Makefile.am  audioextractor.cc  audioextractor.h  canvas.cc  canvas.h  canvastool.cc  canvastool.h  canvastoollisten.cc  canvastoollisten.h  canvastoolselections.cc  canvastoolselections.h  canvastoolthreshold.cc  canvastoolthreshold.h  dgedit.cc  dgedit.qrc  filelist.cc  filelist.h  itemeditor.cc  itemeditor.h  mainwindow.cc  mainwindow.h  mipmap.cc  mipmap.h  player.cc  player.h  presets.ini  samplesorter.cc  samplesorter.h  selection.cc  selection.h  selectioneditor.cc  selectioneditor.h  sleep.h  volumefader.cc  volumefader.h
dgedit/icons/: Makefile.am
dggui/: Makefile.am  button.cc  button.h  button_base.cc  button_base.h  canvas.h  checkbox.cc  checkbox.h  colour.cc  colour.h  combobox.cc  combobox.h  dialog.cc  dialog.h  drawable.h  eventhandler.cc  eventhandler.h  font.cc  font.h  frame.cc  frame.h  guievent.h  helpbutton.cc  helpbutton.h  image.cc  image.h  imagecache.cc  imagecache.h  knob.cc  knob.h  label.cc  label.h  layout.cc  layout.h  led.cc  led.h  lineedit.cc  lineedit.h  listbox.cc  listbox.h  (+56 more)
drumgizmo/: .gitignore  Makefile.am  audioinputenginedl.cc  audioinputenginedl.h  audiooutputenginedl.cc  audiooutputenginedl.h  dgvalidator.cc  drumgizmoc.cc  drumgizmoc.h  enginefactory.cc  enginefactory.h  jackclient.cc  jackclient.h
drumgizmo/input/: Makefile.am  alsamidi.cc  alsamidi.h  inputdummy.cc  inputdummy.h  jackmidi.cc  jackmidi.h  midifile.cc  midifile.h  ossmidi.cc  ossmidi.h  test.cc  test.h
drumgizmo/input/dummy/: Makefile.am
drumgizmo/input/jackmidi/: Makefile.am  audioinputenginejackmidi.cc  audioinputenginejackmidi.h  jackclient.cc  jackclient.h  jackmidi.cc
drumgizmo/input/midifile/: Makefile.am  audioinputenginemidifile.cc  audioinputenginemidifile.h  midifile.cc  midimap.cc  midimap.h
drumgizmo/input/test/: Makefile.am  test.cc
drumgizmo/output/: Makefile.am  alsa.cc  alsa.h  jackaudio.cc  jackaudio.h  oss.cc  oss.h  outputdummy.cc  outputdummy.h  wavfile.cc  wavfile.h
drumgizmo/output/alsa/: Makefile.am  alsa.cc
drumgizmo/output/dummy/: Makefile.am  dummy.cc
drumgizmo/output/jackaudio/: Makefile.am  jackaudio.cc
drumgizmo/output/wavfile/: Makefile.am  wavfile.cc
include/: audiotypes.h  event.h
lv2/: .gitignore  Makefile.am  drumgizmo.ttl  input_lv2.cc  input_lv2.h  lv2.cc  lv2_gui.cc  lv2_gui.h  lv2_instance.h  lv2_uri_map.h  output_lv2.cc  output_lv2.h
plugin/: Makefile.am  Makefile.mingw32.in  README_VST.txt  drumgizmo.ttl  drumgizmo_lv2.sym  drumgizmo_plugin.cc  drumgizmo_plugin.h  drumgizmo_vst.sym
plugin/vst/: Makefile.am
plugingui/: Makefile.am  Makefile.am.plugingui  Makefile.mingw32  abouttab.cc  abouttab.h  bleedcontrolframecontent.cc  bleedcontrolframecontent.h  button.cc  button.h  button_base.cc  button_base.h  canvas.h  checkbox.cc  checkbox.h  colour.cc  colour.h  combobox.cc  combobox.h  dgwindow.cc  dgwindow.h  dialog.cc  directory.cc  directory.h  diskstreamingframecontent.cc  diskstreamingframecontent.h  drawable.h  drumkitframecontent.cc  drumkitframecontent.h  drumkittab.cc  drumkittab.h  event.h  eventhandler.cc  eventhandler.h  filebrowser.cc  filebrowser.h  filelineedit.cc  filelineedit.h  font.cc  font.h  frame.cc  (+111 more)
plugingui/locale/: Makefile.am  da.po  drumgizmo.pot  fr.po
plugingui/png/: README.drumgizmo  png.c  png.h  pngerror.c  pngget.c  pngmem.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c
plugingui/resources/: createrc.sh  png_error
plugingui/tests/: Makefile.am  dgwindowtest.cc  filebrowsertest.cc  framewidgettest.cc  resizetest.cc  tabwidgettest.cc
src/: .cvsignore  .gitignore  DGDOM.h  Makefile.am  Makefile.am.drumgizmo  atomic.h  audio.h  audiocache.cc  audiocache.h  audiocacheeventhandler.cc  audiocacheeventhandler.h  audiocachefile.cc  audiocachefile.h  audiocacheidmanager.cc  audiocacheidmanager.h  audiofile.cc  audiofile.h  audioinputengine.cc  audioinputengine.h  audioinputenginejackmidi.cc  audioinputenginejackmidi.h  audioinputenginemidi.cc  audioinputenginemidi.h  audioinputenginemidifile.h  audiooutputengine.cc  audiooutputengine.h  audiooutputenginealsa.cc  audiooutputenginealsa.h  audiooutputenginejack.cc  audiooutputenginejack.h  audiooutputenginesndfile.cc  audiooutputenginesndfile.h  audiotypes.h  beatmapper.cc  beatmapper.h  bytesizeparser.cc  bytesizeparser.h  cacheaudiofile.cc  cacheaudiofile.h  cachemanager.cc  (+112 more)
test/: Makefile.am  atomictest.cc  audiocacheeventhandlertest.cc  audiocachefiletest.cc  audiocacheidmanagertest.cc  audiocachetest.cc  bytesizeparsertest.cc  cachemanagertest.cc  configparsertest.cc  configtest.cc  dgtest.cc  dgunit.h  dgxmlparsertest.cc  domloadertest.cc  drumkit_creator.cc  drumkit_creator.h  drumkitcreatortest.cc  drumkitparsertest.cc  engine.cc  enginetest.cc  eventsdstest.cc  framesizetest.cc  gui.cc  imagecachetest.cc  instrumentparsertest.cc  lv2.cc  lv2_test_host.cc  lv2_test_host.h  memcheckertest.cc  midimapparsertest.cc  midimappertest.cc  notifiertest.cc  paintertest.cc  powermaptest.cc  randomtest.cc  resampler.cc  resource_test.cc  run_test.sh  scopedfile.cc  scopedfile.h  (+4 more)
test/dgreftest/: Makefile.am  compareoutputengine.cc  compareoutputengine.h  dgreftest.cc  midiinputengine.cc  midiinputengine.h  wavfileoutputengine.cc  wavfileoutputengine.h
test/kit/: huge_instr.xml  huge_kit.xml  instr1.xml  instr2.xml  kit1.xml  kit2.xml  midimap.xml  small_instr.xml  small_kit.xml
test/locale/: da.mo
test/midi/: file1.mid
test/uitests/: Makefile.am  benchmarktest.cc  filebrowsertest.cc  framewidgettest.cc  powerwidgettest.cc  resizetest.cc  tabwidgettest.cc
vst/: Makefile  Makefile.am  Makefile.mingw32  Makefile.mingw32.in  README  constants.h  drumgizmo_vst.cc  drumgizmo_vst.h  input_vst.cc  input_vst.h  output_vst.cc  output_vst.h
(+32 files in other folders)
