# Filename: configure.in

AC_INIT(src/drumgizmo.cc)
AM_INIT_AUTOMAKE( drumgizmo, 0.0.2 )

AC_PROG_CXX

AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

AM_CONFIG_HEADER(config.h)
AC_STDC_HEADERS

AC_ARG_WITH(debug,  [  --with-debug           build with debug support])
if test x$with_debug == xyes; then
    AC_MSG_WARN([*** Building with debug support!])
    CXXFLAGS="$CXXFLAGS -Wall -Werror -g"
fi 

dnl ======================
dnl Check for libsmf
dnl ======================
PKG_CHECK_MODULES(SMF, smf >= 1.2)

dnl ======================
dnl Check for jack
dnl ======================
PKG_CHECK_MODULES(JACK, jack >= 0.109.2)

dnl ======================
dnl Check for sndfile
dnl ======================
PKG_CHECK_MODULES(SNDFILE, sndfile >= 1.0.17)

dnl ======================
dnl Check for eXpat library
dnl ======================
AC_CHECK_HEADER(expat.h, , AC_MSG_ERROR([*** eXpat header file not found!]))
AC_CHECK_LIB(expat, XML_ParserCreate, ,  AC_MSG_ERROR([*** eXpat library not found!]))

dnl ======================
dnl Check for Qt
dnl ======================
PKG_CHECK_MODULES(QT, QtCore QtGui QtXml >= 4.5)
AC_CHECK_PROGS(QT_MOC, [moc4 moc-qt4 moc], [])
AC_CHECK_PROGS(QT_RCC, [rcc4 rcc-qt4 rcc], [])
AC_CHECK_PROGS(QT_UIC, [uic4 uic-qt4 uic], [])
if (test "$QT_MOC" = ""); then
  AC_MSG_ERROR([QT4 moc is required.])
fi
if (test "$QT_RCC" = ""); then
  AC_MSG_ERROR([QT4 rcc is required.])
fi
if (test "$QT_UIC" = ""); then
  AC_MSG_ERROR([QT4 uic is required.])
fi

dnl ======================
dnl Check for getopt
dnl ======================
AC_HAVE_HEADERS(getopt.h)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT(
	Makefile
	src/Makefile
  dgedit/Makefile)

